<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

		<RelativeLayout
	  	
		android:id="@+id/RelativeLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/TextView1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/hello" />
	
	    <Button
	        android:id="@+id/Home"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/TextView1"
	        android:layout_centerHorizontal="true"
	        android:layout_gravity="center"
	        android:text="@string/Home" />
	
	    
	    
	    
		<TextView
	        android:id="@+id/JobAdd_tv_jobname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_below="@+id/Home"
	        android:text="Quantity" />
		
		
	    <Spinner
	        android:id="@+id/JobAdd_s_jobname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/JobAdd_tv_jobname"/>
	        
	    
	    
	    <TextView
	        android:id="@+id/JobAdd_tv_itemname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/JobAdd_s_jobname"
	        android:gravity="center"
	        android:text="@string/String_JobAdd_itemname" />
	    
	    
	    
	    <Spinner
	        android:id="@+id/JobAdd_s_itemname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/JobAdd_tv_itemname" />
	    
	    
	
		<TextView
		        android:id="@+id/JobAdd_tv_quant"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:layout_below="@+id/JobAdd_s_itemname"
		        android:text="Quantity" />
	    
	    <EditText
		        android:id="@+id/JobAdd_b_quant"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/JobAdd_tv_quant"
		        android:inputType="number"
		        android:text="1" />
	    
	    <Button
	        android:id="@+id/JobAdd_b_AddToJob"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/JobAdd_b_quant"
	        android:text="Add to job" 
	        />
	
	</RelativeLayout>
</ScrollView>